Adaptive design improvements

--- a/src/components/Academy/Academy.scss
+++ b/src/components/Academy/Academy.scss
@@ -2,4 +2,8 @@
 
 .Academy {
   background: #04AD5F;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
