--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -26,10 +26,10 @@
   background: url(/images/home/paths-grey.svg) repeat;
 }
 
-.paths-green {
-  background: url(/images/home/paths-green.svg) repeat;
-}
-
-.paths-dark {
-  background: url(/images/home/paths-dark.svg) repeat;
-}
+//.paths-green {
+//  background: url(/images/home/paths-green.svg) repeat;
+//}
+//
+//.paths-dark {
+//  background: url(/images/home/paths-dark.svg) repeat;
+//}
