--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -31,11 +31,16 @@
 
 .Container-fluid {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   overflow: hidden;
   position: relative;
 }
 
 .Container-clipped {
   overflow: hidden;
+}
+
+.Container-flex {
+  display: flex;
+  flex: 1;
 }
