--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,6 +1,8 @@
 @import "../../scss/utils";
 
 .Team {
+  max-height: 100vh;
+
   .Edge-header,
   .Edge-bottom {
     position: absolute;
@@ -12,8 +14,8 @@
 }
 
 .Team-image {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
   min-height: 650px;
 }
