--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -13,7 +13,9 @@ $white:       #ffffff !default;
 $white-50:    rgba(255, 255, 255, 0.5) !default;
 $light:       #F5F5F5 !default;
 $black:       #000000 !default;
+$black-50:    rgba(0, 0, 0, 0.5) !default;
 $dark:        #13151A !default;
+$light-steal: #EBEBF0 !default;
 $dark-steal:  #252933 !default;
 $blue:        #0d6efd !default;
 $grey:        #808085 !default;
