--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,7 +10,6 @@
 
   a {
     color: $grey;
-    text-decoration: none;
     font-size: 14px;
   }
 }
@@ -39,6 +38,10 @@
   padding: 6px 0;
   border-radius: 4px;
   cursor: pointer;
+
+  &:hover {
+    color: $green;
+  }
 }
 
 .Footer-subscribe {
