Remove page's top/bottom 'Edge' component

--- a/src/components/Code/Code.scss
+++ b/src/components/Code/Code.scss
@@ -1,6 +1,7 @@
 @import "../../scss/utils";
 
 .Code {
+  background: $darkest;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
