--- a/src/components/Unstoppable/Unstoppable.scss
+++ b/src/components/Unstoppable/Unstoppable.scss
@@ -1,7 +1,7 @@
 @import "../../scss/utils";
 
 .Unstoppable {
-  background: #F5F5F5;
+  background: $darkest;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
