--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -15,6 +15,7 @@ $light:       #F5F5F5 !default;
 $black:       #000000 !default;
 $black-50:    rgba(0, 0, 0, 0.5) !default;
 $dark:        #13151A !default;
+$darkest:     #0F1014 !default;
 $light-steal: #EBEBF0 !default;
 $dark-steal:  #252933 !default;
 $blue:        #0d6efd !default;
