--- a/src/components/Academy/Academy.scss
+++ b/src/components/Academy/Academy.scss
@@ -1,7 +1,7 @@
 @import "../../scss/utils";
 
 .Academy {
-  background: #04AD5F;
+  background: #000000;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
