--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -24,5 +24,5 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, #FFFFFF 1.81%, transparent 88.04%);
+  background: linear-gradient(90deg, #0F1014 0%, rgba(15, 16, 20, 0) 100%);
 }
