--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "~normalize.css";
 @import "./scss/utils";
 @import "./scss/colors";
+@import "./scss/helpers";
 
 body {
   font-family: $font-family-base;
