--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -9,19 +9,14 @@
 }
 
 .Banner-start {
-  flex: 1;
+  flex: 2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding-top: 10%;
-
-  @include sm {
-    padding-top: 0;
-  }
+  justify-content: space-evenly;
 }
 
 .Banner-end {
-  flex: 2;
+  flex: 3;
   display: flex;
   justify-content: flex-end;
 
@@ -30,7 +25,7 @@
   }
 }
 
-.Banner-text {
+.Banner-title {
   font-size: 64px;
   line-height: 70px;
   display: flex;
@@ -43,12 +38,16 @@
   }
 }
 
-.Banner-text--light {
+.Banner-title--light {
   color: $light-steal;
 }
 
-.Banner-action {
-  padding: 32px 0;
+.Banner-info,
+.Page-info {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  color: $grey;
 }
 
 .Banner-image {
