--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -3,3 +3,17 @@
 .pl-18 {
   padding-left: 18px;
 }
+
+.pl-15 {
+  padding-left: 15px !important;
+}
+
+.line-h-normal {
+  line-height: normal !important;
+}
+
+.sm-hidden {
+  @include sm {
+    display: none !important;
+  }
+}
