--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -26,15 +26,19 @@
 }
 
 .Banner-title {
-  font-size: 64px;
-  line-height: 70px;
+  font-size: 40px;
+  line-height: 52px;
   display: flex;
   align-items: flex-end;
   text-transform: capitalize;
 
   @include sm {
-    font-size: 38px;
-    line-height: 49px;
+    padding: 24px 0;
+  }
+
+  @include md {
+    font-size: 64px;
+    line-height: 83px;
   }
 }
 
@@ -42,12 +46,16 @@
   color: $light-steal;
 }
 
-.Banner-info,
-.Page-info {
-  font-size: 20px;
+.Banner-info, .Page-info {
+  font-size: 16px;
+  line-height: 21px;
   font-weight: 400;
-  line-height: 26px;
   color: $grey;
+
+  @include  md {
+    font-size: 20px;
+    line-height: 26px;
+  }
 }
 
 .Banner-image {
