--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -38,7 +38,7 @@
 .Contact-item {
   display: flex;
   flex-direction: column;
-  padding-right: 24px;
+  padding-right: 20px;
 
   @include sm {
     padding: 20px 0;
@@ -46,8 +46,10 @@
 }
 
 .Contact-item-head {
+  cursor: pointer;
   display: flex;
   align-items: center;
+  text-decoration: none;
 }
 
 .Contact-item-title {
