--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -18,6 +18,7 @@ $dark:        #13151A !default;
 $darkest:     #0F1014 !default;
 $light-steal: #EBEBF0 !default;
 $dark-steal:  #252933 !default;
+$dark-light:  #37393B !default;
 $blue:        #0d6efd !default;
 $grey:        #808085 !default;
 $gray-light:  #C8C7CC !default;
