--- a/src/components/Code/Code.scss
+++ b/src/components/Code/Code.scss
@@ -1,8 +1,4 @@
 @import "../../scss/utils";
 
-.Container-code {
-  background: $darkest;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.Code-slider {
 }
