--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 @import "../../scss/utils";
 
 .Header {
-  position: absolute;
+  position: fixed;
   height: 110px;
   width: 100vw;
   display: flex;
