--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,12 +1,21 @@
 @import "../../scss/utils";
 
 .Card {
-  border-radius: 16px;
-  padding: 32px;
+  padding: 70px 52px 52px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-radius: 24px;
+  border: 1px solid $grey-50;
   overflow: hidden;
+
+  @include md {
+    padding: 40px 32px 32px;
+  }
+
+  @include sm {
+    padding: 40px 24px 24px;
+  }
 }
 
 .Card-start {
@@ -18,7 +27,7 @@
 }
 
 .Card-title {
-  padding-bottom: 40px;
+  padding: 52px 0;
   font-style: normal;
   font-weight: normal;
   font-size: 32px;
@@ -46,18 +55,7 @@
   }
 }
 
+
 .Card-dark {
   background: $black;
-}
-
-.Card-info--grey {
-  color: $grey;
-}
-
-.Card-info--white {
-  color: $white;
-}
-
-.Card-info--dark {
-  color: $dark;
 }
