--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,20 +1,20 @@
 @import "../../scss/utils";
 
 .Card {
-  padding: 70px 52px 52px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border-radius: 24px;
   border: 1px solid $grey-50;
   overflow: hidden;
+  padding: 40px 24px 24px;
 
   @include md {
     padding: 40px 32px 32px;
   }
 
-  @include sm {
-    padding: 40px 24px 24px;
+  @include lg {
+    padding: 70px 52px 52px;
   }
 }
 
