--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -55,6 +55,12 @@
   }
 }
 
+.hide-on-mobile {
+  @include sm {
+    display: none !important;
+  }
+}
+
 .Menu-wrap {
   z-index: 2;
   display: none;
@@ -69,10 +75,22 @@
   display: none;
 }
 
-.navbar-dropdown {
-  display: none;
+.Header-collapse {
   position: absolute;
-  background: $dark;
+  width: 100%;
+  height: 100%;
+  display: block;
+
+  @include md {
+    display: none;
+  }
+}
+
+.Header-collapse-menu {
+  display: none;
+  overflow: hidden;
+  position: absolute;
+  background: $black;
   width: 100%;
   height: 100vh;
   padding-top: 100px;
