--- a/src/components/Mission/Mission.scss
+++ b/src/components/Mission/Mission.scss
@@ -18,10 +18,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg, #0F1014 0%, rgba(15, 16, 20, 0) 100%);
+  background: linear-gradient(90deg, #000000 0%, rgba(15, 16, 20, 0) 100%);
 
   @include sm {
-    background: linear-gradient(90deg, #0F1014 0%, rgba(15, 16, 20, 0) 200%);
+    background: linear-gradient(90deg, #000000 0%, rgba(15, 16, 20, 0) 200%);
   }
 }
 
