--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -8,14 +8,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 52px;
+  padding: 24px;
 
   @include md {
     padding: 32px;
   }
 
-  @include sm {
-    padding: 24px;
+  @include lg {
+    padding: 52px;
   }
 }
 
@@ -60,6 +60,7 @@
   font-size: 20px;
   line-height: 26px;
   font-weight: 400;
+  width: 80%;
 }
 
 .Projects-tab-item {
